@@ -16,10 +16,10 @@
 package org.uncommons.maths.random;
 
 import java.util.Random;
-import org.uncommons.maths.ConstantGenerator;
-import org.uncommons.maths.NumberGenerator;
 import org.uncommons.maths.binary.BinaryUtils;
 import org.uncommons.maths.binary.BitString;
+import org.uncommons.maths.number.ConstantGenerator;
+import org.uncommons.maths.number.NumberGenerator;
 
 /**
  * Discrete random sequence that follows a binomial distribution.
