@@ -17,9 +17,9 @@ package org.uncommons.maths.random;
 
 import java.util.Random;
 import org.testng.annotations.Test;
-import org.uncommons.maths.AdjustableNumberGenerator;
 import org.uncommons.maths.Maths;
-import org.uncommons.maths.NumberGenerator;
+import org.uncommons.maths.number.AdjustableNumberGenerator;
+import org.uncommons.maths.number.NumberGenerator;
 import org.uncommons.maths.statistics.DataSet;
 
 /**
