@@ -17,7 +17,7 @@ package org.uncommons.maths.random;
 
 import org.testng.annotations.Test;
 import org.uncommons.maths.Maths;
-import org.uncommons.maths.NumberGenerator;
+import org.uncommons.maths.number.NumberGenerator;
 import org.uncommons.maths.statistics.DataSet;
 
 /**
