@@ -7,6 +7,8 @@ Changes in version 1.1
 * Moved PermutationGenerator and CombinationGenerator into new combinatorics
   package.
 
+* Moved NumberGenerator and its implementations into new number package.
+
 * Added demo program for different probability distributions (ISSUE#2).
 
 
